container overflow fix

--- a/app/assets/css/dashboard/dashboard.css
+++ b/app/assets/css/dashboard/dashboard.css
@@ -1,5 +1,5 @@
 .content .container {
-	overflow: auto;
+	overflow: visible;
 }
 /* Header */
 nav {
